Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -112,6 +112,7 @@ header.bk-header {
   display: block;
   float: left;
   padding: 20px 0px 18px;
+  width: 25%;
 }
 
 /* COMPANY NAME */
@@ -236,7 +237,7 @@ footer.bk-footer .widget.companyname a {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  max-width: 700px;
+  width: 75%;
   margin: 20px 0;
 }
 
@@ -245,7 +246,6 @@ footer.bk-footer .widget.companyname a {
 }
 
 .widget.extendednavigation ul {
-  float: left;
   margin: 0;
   padding: 0;
 }
